改为脱糖结构